# praylib

./: .gitignore  CMakeLists.txt  dev-environment.yaml  environment-wasm-build.yml  environment-wasm-host.yml  pyproject.toml
.github/workflows/: demo.yaml
companion_packages/praylib_wasm_deploy/: pyproject.toml
companion_packages/praylib_wasm_deploy/praylib_wasm_deploy/: cli.py
companion_packages/praylib_wasm_deploy/praylib_wasm_deploy/defaults/: environment-wasm.yml  index.html  overlay-worker.js  praylibconf.toml
emscripten_forge/recipe/: recipe.yaml.template
sandbox/hello_world/code/: main.py  mt.py
scripts/: build_emscripten_forge_pkg.sh  build_wasm_env.sh  build_wasm_host.sh  build_wasm_project.sh
src/: index.html  main.cpp  post.js  praylib_wasm_host.cpp  py_converter.hpp
src/module/: raylib
src/module/praylib/: __init__.py  ctx_managers.py  main_loop.py  raylib.py
src/raylib/: export_constants.cpp  export_raylib.cpp  export_rcore.cpp  export_rshapes.cpp  export_rtext.cpp  export_rtexture.cpp  export_structs.cpp
src/raylib_extensions/: export_extra_shapes.cpp  export_flipped_camera_2d.cpp  export_raylib_extensions.cpp
